# playground

./: .gitignore  CMakeLists.txt  shader.hpp
include/: openglapp.hpp  vertexbuffer.hpp
include/glad/: glad.h  glad_wgl.h
src/: glad.c  glad_wgl.c  openglapp.cpp  openglapp.hpp  program.cpp  shader.cpp  shader.hpp  vertexbuffer.hpp
